<com.google.android.material.card.MaterialCardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/card"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="10dp"
    android:elevation="30dp"
    app:cardForegroundColor="#00FFFFFF">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <!-- Media -->
        <ImageView
            android:id="@+id/card_pet_image"
            android:layout_width="match_parent"
            android:layout_height="194dp"
            android:contentDescription="Pet main image"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/cat" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="16dp">

            <!-- Title, secondary and supporting text -->
            <LinearLayout
                android:id="@+id/linear_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/card_pet_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentTop="true"
                    android:text="Pet name"
                    android:textAppearance="?attr/textAppearanceHeadline6" />

                <ImageView
                    android:id="@+id/card_pet_gender"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_toRightOf="@id/card_pet_name"
                    android:paddingLeft="8dp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/linear_1"
                android:layout_marginTop="8dp"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/card_pet_breed"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="Pet breed"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />

                <TextView
                    android:id="@+id/card_pet_age"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="30dp"
                    android:text="Pet Age"
                    android:textAppearance="?attr/textAppearanceBody2"
                    android:textColor="?android:attr/textColorSecondary" />
            </LinearLayout>

            <ImageView
                android:id="@+id/card_pet_is_favourite"
                android:layout_width="50dp"
                android:layout_height="50dp"
                android:layout_alignParentRight="true"
                android:adjustViewBounds="false"
                android:scaleType="fitCenter"
                app:srcCompat="@drawable/baseline_favorite_24"/>
        </RelativeLayout>
    </LinearLayout>
</com.google.android.material.card.MaterialCardView>
