...
    tools:showIn="navigation_view">

    <group
        android:id="@+id/main_group"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_user_profile"
            android:icon="@drawable/baseline_account_circle_24"
            android:title="@string/menu_user_profile"/>
        <item
            android:id="@+id/nav_search"
            android:icon="?android:attr/actionModeWebSearchDrawable"
            android:title="@string/menu_search" />
...
